# Blog

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
templates/: about.html  header.html  index.html
