[project]
name = "blog-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-ckeditor>=1.0.0",
    "flask-gravatar>=0.5.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
]
